--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .info {
-    background: -webkit-linear-gradient(rgb(255, 255, 255), rgb(204, 56, 201));
+    background: -webkit-linear-gradient(rgb(143, 139, 139), rgb(204, 56, 201));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -34,6 +34,19 @@ body {
 .card-img-top {
     height: 380px;
     width: 400px;
+}
+
+.link-spanner{
+    position:absolute; 
+    width:100%;
+    height:100%;
+    top:0;
+    left: 0;
+    z-index: 1;
+}
+
+.card:hover {
+    background-color: rgb(48, 47, 47);
 }
 
 .facefoto {
@@ -49,7 +62,7 @@ body {
 }
 
 .htmlcssgradient {
-    background: -webkit-linear-gradient(rgb(38, 77, 228) , rgb(227, 76, 38));
+    background: -webkit-linear-gradient(rgb(89, 118, 236) , rgb(227, 76, 38));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
