--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,17 @@
-html {
-    height: 100%;
-}
-
 body { 
-    padding-top: 65px;
+    padding-top: 20px;
     font-family: "Open sans";
     background-color: rgb(40, 39, 39);
     color: rgb(247, 247, 247);
-    height: 100%;
+}
+
+#aboutme, #languageskills, #portfolio, #contactme, #jobexperience {
+    height: 100vh;
 }
 
 #tplogo, #aglogo {
-    height: 40px;
-    width: 40px;
-}
-
-
-#aboutme, #portfolio, #contactme, #jobexperience{
-    height: 100%;
-    width: 100%;
+    height: 30px;
+    width: 30px;
 }
 
 #logos {
@@ -36,6 +29,49 @@ body {
     width: 400px;
 }
 
+.job {
+    font-size: 30px;
+}
+
+.jobinfo {
+    font-size: 25px;
+}
+
+
+@media (max-width: 1200px) {
+    .card-img-top{height: 100px;
+                  width: 110px;
+                  display: block;
+                  margin-left: auto;
+              margin-right: auto;}
+    .job {font-size: 25px;}
+    .jobinfo {font-size: 20px;}
+
+ } 
+
+
+@media (max-width: 744px) {  
+    .card-img-top {height: 70px;
+                   width: 80px;
+                   display: block;
+                   margin-left: auto;
+               margin-right: auto;}
+    .job {font-size: 18px;}
+    .jobinfo {font-size: 15px;} 
+
+  } 
+
+ @media (max-width: 500px) {  
+    .card-img-top {height: 70px;
+                   width: 80px;
+                    display: block;
+                margin-left: auto;
+            margin-right: auto;}
+    .job{font-size: 16px;}
+    .jobinfo {font-size: 14px;}
+}
+
+
 .link-spanner{
     position:absolute; 
     width:100%;
@@ -49,11 +85,6 @@ body {
     background-color: rgb(48, 47, 47);
 }
 
-.facefoto {
-    border-radius: 70%;
-    height: 400px;
-    width: 300px;
-}
 
 .pythongradient {
     background: -webkit-linear-gradient(rgb(75, 139, 190), rgb(255, 212, 59));
@@ -67,13 +98,7 @@ body {
     -webkit-text-fill-color: transparent;
 }
 
-.job {
-    font-size: 40px;
-}
 
-.jobinfo {
-    font-size: 20px;
-}
 
 .nav-link {
     font-size: 20px;
